# OxyJWT

./: .dockerignore  .gitignore  Dockerfile.docs  LICENSE  README.md  docker-compose.docs.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: development.md  getting-started.md
docs-site/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml
docs-site/docs/: api-reference.md  changelog.md  development.md  index.md  security.md
docs-site/docs/usage/: decoding.md  errors.md  keys.md  migration-pyjwt.md
docs/usage/: encoding.md
python/oxyjwt/: __init__.py  _oxyjwt.pyi  api_jwt.py  exceptions.py  jwk.py  jwk_exc.py  jwks_client.py  typing.py  warnings.py
rust/: Cargo.toml
rust/src/: algorithms.rs  api.rs  claims.rs  errors.rs  jws.rs  keys.rs  lib.rs  validation.rs
scripts/: compare_jwt_libraries.py
tests/: conftest.py  test_algorithms.py  test_encode_decode.py  test_errors.py  test_headers.py  test_jwk.py  test_jwks_client.py  test_parity_pyjwt.py  test_validation.py
